--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "tinyd6",
+  "name": "tinyd6s",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.3.0",
+    "@storybook/svelte": "^6.5.16",
+    "@storybook/testing-library": "0.0.13",
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
-    "svelte": "^3.54.0",
+    "babel-loader": "^8.3.0",
+    "svelte": "^3.55.1",
     "svelte-check": "^2.10.0",
+    "svelte-loader": "^3.1.5",
     "terser": "^5.16.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
-  }
+  },
+  "dependencies": {}
 }
