Runnable scaffold for storybook

--- a/package.json
+++ b/package.json
@@ -8,22 +8,25 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.3.0",
-    "@storybook/svelte": "^6.5.16",
-    "@storybook/testing-library": "0.0.13",
+    "@storybook/addon-essentials": "^7.0.0-beta.36",
+    "@storybook/addon-interactions": "^7.0.0-beta.36",
+    "@storybook/addon-links": "^7.0.0-beta.36",
+    "@storybook/blocks": "^7.0.0-beta.36",
+    "@storybook/svelte": "^7.0.0-beta.36",
+    "@storybook/svelte-vite": "^7.0.0-beta.36",
+    "@storybook/testing-library": "^0.0.13",
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
     "babel-loader": "^8.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.0-beta.36",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.0",
     "svelte-loader": "^3.1.5",
